langswitcxher popup style updated, pager button fix, code dark theme styled, core vertical scrollbar added

--- a/src/DotvvmAcademy.Web/Resources/_Stylesheets/Components/buttons.scss
+++ b/src/DotvvmAcademy.Web/Resources/_Stylesheets/Components/buttons.scss
@@ -123,6 +123,7 @@
 
     &.with-loading {
         position: relative;
+        min-height: 4rem;
 
         span, svg {
             display: none;
