--- a/src/DotvvmAcademy.Web/Resources/_Stylesheets/Components/pager.scss
+++ b/src/DotvvmAcademy.Web/Resources/_Stylesheets/Components/pager.scss
@@ -20,7 +20,6 @@
         width: 12rem;
         min-width: 5rem;
         padding: .8rem 0;
-        min-height: 4rem;
     }
 
     > div {
